<?xml version="1.0" encoding="utf-8"?><!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Copyright 2019 saber-nyan                                                 ~
  ~                                                                           ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");           ~
  ~ you may not use this file except in compliance with the License.          ~
  ~ You may obtain a copy of the License at                                   ~
  ~                                                                           ~
  ~     http://www.apache.org/licenses/LICENSE-2.0                            ~
  ~                                                                           ~
  ~ Unless required by applicable law or agreed to in writing, software       ~
  ~ distributed under the License is distributed on an "AS IS" BASIS,         ~
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  ~
  ~ See the License for the specific language governing permissions and       ~
  ~ limitations under the License.                                            ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/constraintLayout_root"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_margin="16dp"
	android:animateLayoutChanges="true">

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/textInputLayout_serverAddress"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="16dp"
		app:layout_constraintBottom_toTopOf="@+id/textInputLayout_token"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_chainStyle="packed">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/textInputEditText_serverAddress"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/layout_MainActivity_serverAddress"
			android:inputType="textUri" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/textInputLayout_token"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="16dp"
		app:layout_constraintBottom_toTopOf="@+id/linearLayout_media"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textInputLayout_serverAddress">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/textInputEditText_token"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/layout_MainActivity_token"
			android:inputType="textVisiblePassword" />
	</com.google.android.material.textfield.TextInputLayout>

	<LinearLayout
		android:id="@+id/linearLayout_media"
		style="?android:attr/buttonBarStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="16dp"
		app:layout_constraintBottom_toTopOf="@+id/linearLayout_volume"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textInputLayout_token">

		<Button
			android:id="@+id/button_prev"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:background="@drawable/border_2px_rounded"
			android:text="@string/layout_MainActivity_prev" />

		<Button
			android:id="@+id/button_playPause"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="16dp"
			android:layout_marginRight="16dp"
			android:layout_weight="1"
			android:background="@drawable/border_2px_rounded"
			android:text="@string/layout_MainActivity_playPause" />

		<Button
			android:id="@+id/button_next"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:background="@drawable/border_2px_rounded"
			android:text="@string/layout_MainActivity_next" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/linearLayout_volume"
		style="?android:attr/buttonBarStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/linearLayout_media">

		<Button
			android:id="@+id/button_volDown"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:background="@drawable/border_2px_rounded"
			android:text="@string/layout_MainActivity_volDown" />

		<Button
			android:id="@+id/button_mute"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="16dp"
			android:layout_marginRight="16dp"
			android:layout_weight="1"
			android:background="@drawable/border_2px_rounded"
			android:text="@string/layout_MainActivity_mute" />

		<Button
			android:id="@+id/button_volUp"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:background="@drawable/border_2px_rounded"
			android:text="@string/layout_MainActivity_volUp" />
	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
